# CppQmlModule

./: CMakeLists.txt  CppText.cpp  CppText.h  README.md  SimpleCppModulePlugin.cpp  SimpleCppModulePlugin.h  plugins.qmltypes  qmldir
